# mirage

./: README.md  meson.build
src/: MApp.cpp  MApp.hpp  Mirage.hpp
src/Core/: MApp.cpp  MApp.hpp  Mirage.cpp  Mirage.hpp
src/Events/: MClickEventHandler.cpp  MClickEventHandler.hpp  MEventHandler.cpp  MEventHandler.hpp
src/Gui/: MDrawable.cpp  MDrawable.hpp  MText.cpp  MText.hpp  MWindow.cpp  MWindow.hpp
src/Gui/Windows/: MWinWindow.cpp  MWinWindow.hpp  MWinWindows.cpp  MWinWindows.hpp
test/: main.cpp
